# ppc-2025-processes-engineers

./: .gitignore
tasks/seq/peterson_r_min_in_cols/: CMakeLists.txt  main.cpp
tasks/seq/peterson_r_min_in_cols/func_tests/: func_tests.cpp
tasks/seq/peterson_r_min_in_cols/include/: peterson_r_min_in_cols_seq.h
tasks/seq/peterson_r_min_in_cols/perf_tests/: perf_tests.cpp
tasks/seq/peterson_r_min_in_cols/src/: main.cpp  peterson_r_min_in_cols_seq.cpp
tasks/shkryleva_s_vec_min_val/: report.md
tasks/shkryleva_s_vec_min_val/mpi/include/: ops_mpi.hpp
tasks/shkryleva_s_vec_min_val/mpi/src/: ops_mpi.cpp
tasks/shkryleva_s_vec_min_val/seq/include/: ops_seq.hpp
tasks/shkryleva_s_vec_min_val/seq/src/: ops_seq.cpp
tasks/shkryleva_s_vec_min_val/tests/functional/: main.cpp
tasks/shkryleva_s_vec_min_val/tests/performance/: main.cpp
tasks/zyazeva_s_vector_dot_product/: report.md
tasks/zyazeva_s_vector_dot_product/common/: common.hpp
tasks/zyazeva_s_vector_dot_product/common/include/: common.hpp
tasks/zyazeva_s_vector_dot_product/mpi/include/: ops_mpi.hpp
tasks/zyazeva_s_vector_dot_product/mpi/src/: ops_mpi.cpp
tasks/zyazeva_s_vector_dot_product/seq/include/: ops_seq.hpp
tasks/zyazeva_s_vector_dot_product/seq/src/: ops_seq.cpp
tasks/zyazeva_s_vector_dot_product/tests/functional/: main.cpp
tasks/zyazeva_s_vector_dot_product/tests/performance/: main.cpp
